# ADD_ChatbotBook

./: .gitignore  README.md  chatUI.md  clarification_reminder.md  index.html  pyproject.toml  redesigned_sections.html
.gemini/tmp/: add_pytest.ps1  add_pytest_asyncio.ps1  alembic_init.ps1  alembic_revision.ps1  init_poetry.ps1  run_models_test.ps1  run_schemas_test.ps1
.gemini/tmp/a8d14f4d9799bfd3d4010a8bf84bb42674a065df85dae54a4be478ab30a1c720/: rag_qdrant_spec_creation.ps1
Bookplus_Chatbot/.specify/memory/: constitution.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 019c33fc5007_create_chat_sessions_and_messages_tables.py  6472c39ecba8_create_chat_sessions_and_messages_tables.py  f20f09926f5f_create_chat_sessions_and_messages_tables.py  ffdad0695bdd_create_chat_sessions_and_messages_tables.py
backend/scripts/: test_qdrant_connection.py  validate_env.py  verify_qdrant_data.py
backend/src/: database.py  exceptions.py  main.py  models.py  schemas.py
backend/src/config/: logging.py
backend/src/repositories/: chat_repository.py
backend/src/services/: message_repository.py  openai_client.py  rag_service.py  session_manager.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_existing_session.py  test_chat_new_session.py  test_chat_selected_text.py  test_error_scenarios.py  test_ingest_endpoint.py  test_rag_chat.py
backend/tests/unit/: test_models.py  test_openai_client.py  test_rag_service.py  test_schemas.py  test_session_manager.py
frontend/: .gitignore  docusaurus.config.ts  jest-setup.js  package-lock.json  package.json  sidebars.ts
frontend/docs/: appendices.md  capstone.md  intro.md
frontend/docs/module-1/: chapter-1.md  chapter-2.md  chapter-3.md
frontend/docs/module-2/: chapter-4.md  chapter-5.md  chapter-6.md
frontend/docs/module-3/: chapter-7.md  chapter-8.md  chapter-9.md
frontend/docs/module-4/: chapter-10.md  chapter-11.md  (+1 more)
specs/001-book-content/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fastapi-chat-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-docusaurus-chatbot-ui/: README.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md  testing-notes.md
specs/004-robotics-ui-theme/: plan.md  spec.md  style-guide.md  tasks.md
specs/005-rag-qdrant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tools/: sync_book_to_qdrant.py
(+93 files in other folders)
